feat: start on frontend, fix image for planets, fix habitability calculation, fix backend controller issue