@@ -3,7 +3,6 @@ plugins {
     kotlin("plugin.spring") version "1.9.25"
     id("org.springframework.boot") version "3.4.0"
     id("io.spring.dependency-management") version "1.1.6"
-    id("com.netflix.dgs.codegen") version "6.2.1"
     kotlin("plugin.jpa") version "1.9.25"
 }
 
@@ -18,19 +17,32 @@ java {
 
 repositories {
     mavenCentral()
+    maven { url = uri("https://www.dcm4che.org/maven2/") }
+}
+
+configurations.all {
+    exclude(group = "com.vaadin.external.google", module = "android-json")
 }
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation("org.springframework.boot:spring-boot-starter-graphql")
-    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-web") {
+        exclude(module = "android-json") // Exclude it here as well to be thorough
+    }
+    implementation("org.springframework.boot:spring-boot-starter-graphql") // Add this
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
-    implementation("org.json:json:20230227")
+    implementation("org.json:json:20231013")
+    implementation("com.h2database:h2")
+    implementation("org.dcm4che:dcm4che-imageio:5.31.2")
+    implementation("org.flywaydb:flyway-core")
+    implementation("org.flywaydb:flyway-database-postgresql")
     developmentOnly("org.springframework.boot:spring-boot-docker-compose")
     runtimeOnly("org.postgresql:postgresql")
 
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude(module = "android-json")
+    }
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
     testImplementation("org.springframework:spring-webflux")
     testImplementation("org.springframework.graphql:spring-graphql-test")
@@ -45,11 +57,6 @@ kotlin {
     }
 }
 
-tasks.generateJava {
-    schemaPaths.add("${projectDir}/src/main/resources/graphql")
-    packageName = "com.exo.exoworldsbackend.codegen"
-    generateClient = true
-}
 
 allOpen {
     annotation("jakarta.persistence.Entity")
@@ -59,6 +66,11 @@ allOpen {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    systemProperty("spring.profiles.active", "test")
+    jvmArgs = listOf(
+        "-XX:+EnableDynamicAgentLoading",
+        "-Djdk.instrument.traceUsage"
+    )
 }
 
 tasks.bootJar {
